objects/Tower__c/fields/Elevator_Count__c.field-meta.xml
<CustomField>
    <fullName>Elevator_Count__c</fullName>
    <label>Elevator Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>