objects/Tower__c/fields/Floor_Plan_Link__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan_Link__c</fullName>
    <label>Floor Plan Link</label>
    <type>Url</type>
</CustomField>