objects/Tower__c/fields/Orientation__c.field-meta.xml
<CustomField>
    <fullName>Orientation__c</fullName>
    <label>Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>